# data_challenge

./: pyproject.toml
data_challenge/: example.db  main.py
data_challenge/static/: style.css
data_challenge/templates/: index.html
