[tool.poetry]
name = "data-challenge"
version = "0.1.0"
description = ""
authors = ["Alexander Ueno <alexander.ueno@edu.unifil.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
plotly = "^5.24.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
